<resources>
    <string name="app_name">Books</string>
    <string name="enter_btn">Entrar</string>
    <string name="inputText_email">Email</string>
    <string name="inputText_password">Senha</string>
    <string name="loginTitle_books">Books</string>
    <string name="wrong_email_password">Email e/ou senha incorretos.</string>
    <string name="search">Pesquisar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">Fechar</string>
    <string name="authors">Tim Brown, Julie Zhuo, Fried Maximiilian</string>
    <string name="exampleReviewBook">The subject of “design thinking” is the rage at business schools, throughout corporations, and increasingly in the popular press—due in large part to the work of IDEO, a leading design firm, and its celebrated CEO, Tim Brown, who uses this book to show how the techniques and strategies of design belong at every level.</string>
    <string name="information">Informações</string>
    <string name="pages">Páginas</string>
    <string name="publishing_company">Editora</string>
    <string name="publication">Publicação</string>
    <string name="language">Idioma</string>
    <string name="original_title">Título Original</string>
    <string name="isbn_10">ISBN-10</string>
    <string name="isbn_13">ISBN-13</string>
    <string name="publishers_review">RESENHA DA EDITORA</string>
    <string name="book_not_found">Não encontramos nenhum \nlivro com esses termos.</string>
</resources>